# dgx-spark-mlssd-unsloth-trainer

./: .gitignore  AGENTS.md  README.md  requirements.txt
.codex/skills/dgx-spark-code-trainer/: SKILL.md
.codex/skills/dgx-spark-code-trainer/agents/: openai.yaml
.codex/skills/dgx-spark-code-trainer/references/: lora-squeeze.md  modes.md  references.md  runbook.md
.codex/skills/dgx-spark-code-trainer/scripts/: check_repo.py
benchmarks/agent_evals/: README.md  pyproject.toml
benchmarks/agent_evals/agent_evals/: aggregate.py  cli.py  config.py  doctor.py  shell.py  summary.py  upstream.py
benchmarks/agent_evals/agent_evals/runners/: __init__.py  common.py  mcpmark.py  swebench.py  terminal_bench.py
benchmarks/agent_evals/configs/: benchmarks.yaml
benchmarks/agent_evals/scripts/: bootstrap.sh
configs/: train.example.yaml
data/eval/: code_eval.jsonl
data/prompts/: code_prompts.jsonl
data/skill0/: skill_tasks.jsonl
docs/: frontend-design.md  references.md
scripts/: bootstrap_dgx_spark.sh  build_mixed_dataset.py  build_skill0_dataset.py  build_skill_views.py  common.py  evaluate_codegen.py  evaluate_livecodebench.py  generate_ssd_local.py  livecodebench_utils.py  prepare_agent_data.py  prepare_ssd_data.py  recover_after_squeeze.py  run_training_plan.py  source_adapters.py  squeeze_lora.py  train_unsloth_lora.py
scripts/ml_ssd_templates/: self_distillation_prompt_function.j2  self_distillation_prompt_stdin.j2
tests/: test_agent_evals.py  test_regressions.py
